<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reservas.CrearReservaFragment">

    <TextView
        android:id="@+id/reservar_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/reservar_grande"
        android:textSize="30sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/sel_fecha_et"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sel_fecha_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="false"
        android:focusable="false"
        android:hint="@string/AyudaFecha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reservar_tag" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/profesor_tag_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sel_fecha_et" />

    <TextView
        android:id="@+id/et_cursogrupo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/curso_grupo_tag_str"
        app:layout_constraintBottom_toTopOf="@+id/curso_grupo_spin"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:layout_editor_absoluteX="-9dp" />

    <Spinner
        android:id="@+id/curso_grupo_spin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/et_cursogrupo"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/et_auloa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/aula_tag_str"
        app:layout_constraintBottom_toTopOf="@+id/aulas"
        app:layout_constraintTop_toBottomOf="@+id/curso_grupo_spin"
        tools:layout_editor_absoluteX="0dp" />

    <Spinner
        android:id="@+id/aulas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/et_auloa"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/hora1"
        android:layout_width="51dp"
        android:layout_height="45dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="184dp"
        android:text="@string/h1"
        android:backgroundTint="@color/instituto"
        app:layout_constraintBottom_toTopOf="@+id/modificar_btn"
        app:layout_constraintEnd_toStartOf="@+id/hora2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/hora2"
        android:layout_width="51dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="184dp"
        android:text="@string/h2"
        android:backgroundTint="@color/instituto"
        app:layout_constraintBottom_toTopOf="@+id/modificar_btn"
        app:layout_constraintEnd_toStartOf="@+id/hora3"
        app:layout_constraintStart_toEndOf="@+id/hora1" />

    <Button
        android:id="@+id/hora3"
        android:layout_width="51dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="184dp"
        android:text="@string/h3"
        android:backgroundTint="@color/instituto"
        app:layout_constraintBottom_toTopOf="@+id/modificar_btn"
        app:layout_constraintEnd_toStartOf="@+id/hora4"
        app:layout_constraintStart_toEndOf="@+id/hora2" />

    <Button
        android:id="@+id/hora4"
        android:layout_width="51dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="184dp"
        android:text="@string/h4"
        android:backgroundTint="@color/instituto"
        app:layout_constraintBottom_toTopOf="@+id/modificar_btn"
        app:layout_constraintEnd_toStartOf="@+id/hora5"
        app:layout_constraintStart_toEndOf="@+id/hora3" />

    <Button
        android:id="@+id/hora5"
        android:layout_width="51dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="184dp"
        android:text="@string/h5"
        android:backgroundTint="@color/instituto"
        app:layout_constraintBottom_toTopOf="@+id/modificar_btn"
        app:layout_constraintEnd_toStartOf="@+id/hora6"
        app:layout_constraintStart_toEndOf="@+id/hora4" />

    <Button
        android:id="@+id/hora6"
        android:layout_width="51dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="184dp"
        android:text="@string/h6"
        android:backgroundTint="@color/instituto"
        app:layout_constraintBottom_toTopOf="@+id/modificar_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hora5" />


    <Button
        android:id="@+id/reservar_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="60dp"
        android:hint="@string/reservar_tag"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/instituto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/modificar_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/modificar_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="60dp"
        android:hint="@string/modificar_tag"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/instituto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mantenimiento_btn"
        app:layout_constraintStart_toEndOf="@+id/reservar_btn" />

    <Button
        android:id="@+id/mantenimiento_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="60dp"
        android:hint="@string/mantenimiento_tag"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/instituto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/modificar_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>