<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".incidencias.views.CrearIncidenciaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profesor_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profesor_tag_str"
            android:textSize="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/profesor_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="Escribe aqui tu nombre."
            android:textSize="16dp" />

        <TextView
            android:id="@+id/descripcion_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_tag_str"
            android:textSize="16dp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/descripcion_content"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginBottom="30dp"
            android:inputType="text|textMultiLine"
            android:hint="Escribe aqui la descripcion del problema."
            android:textSize="16dp" />

        <TextView
            android:id="@+id/codequipo_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/codigo_equipo_tag_str"
            android:textSize="16dp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/codigoequipo_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="Introduce el codigo del equipo"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/codaula_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/codigo_aula_tag_str"
            android:textSize="16dp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/codigoaula_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="Introduce el codigo del aula."
            android:textSize="16dp" />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="95dp">

            <Button
                android:id="@+id/buttonCrearIncidencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/crear_bton"
                android:backgroundTint="#6C1212"
                />

            <Button
                android:id="@+id/buttonLimpiarIncidencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limpiar_bton"
                android:backgroundTint="#6C1212"
                />

        </LinearLayout>
    </LinearLayout>
</ScrollView>