<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".incidencias.views.VerIncidenciasFragment"
        >

        <TextView
            android:id="@+id/fecha_inc_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/fecha_tag_str"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fecha_inc_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/desc_inc_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/descripcion_tag_str"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/desc_inc_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/codequipo_inc_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/codigo_equipo_tag_str"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/codequipo_inc_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/codaula_inc_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/codigo_aula_tag_str"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/codaula_inc_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            android:textSize="20sp" />

    </LinearLayout>
